Add responsiveness to categories  page

--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -7,6 +7,8 @@ $light-grey: #c5c5c5;
 $dark-grey: #353535;
 $black: #000;
 $lightblue: #add8e6;
+$teal-cream: #2e6b61;
+$light-teal-cream: #5aa492;
 
 $navshadow: rgba(10, 10, 10, 0.2);
 
