--- a/client/styles/gameboard.scss
+++ b/client/styles/gameboard.scss
@@ -1,14 +1,59 @@
+@mixin teal-button {
+  border: 1px solid $light-teal-cream;
+
+  &:hover {
+    border: 1px solid $white;
+    background: $teal-cream;
+    color: $white;
+  }
+}
+
+.Category--box {
+  background: $light-teal-cream;
+  margin: 1rem;
+}
+
+.Category--image {
+  width: 100px;
+
+  @media screen and (max-width: 360px) {
+    width: 64px;
+  }
+}
+.Category--title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 2.4rem;
+  color: whitesmoke;
+
+  @media screen and (max-width: 360px) {
+    height: 64px;
+    font-size: 1.8rem;
+  }
+}
+
 .Question {
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: lightseagreen;
+  background-color: $teal-cream;
   color: white;
   font-size: 1.6rem;
+
   @media screen and (min-width: 769px) {
     border-radius: 20px;
   }
+}
+
+.ProgressBar {
+  margin: 10px;
+}
+
+.ChoiceList {
+  margin-top: 80px;
 }
 
 .Choice > button {
@@ -16,4 +61,30 @@
   height: 80px;
   white-space: normal;
   word-wrap: break-word;
+  @include teal-button;
+}
+
+.Result {
+  background: $teal-cream;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+}
+
+.Result-congrats {
+  color: $white;
+  font-size: 2.5rem;
+  @media screen and (max-width: 360px) {
+    font-size: 2rem;
+  }
+}
+
+.Result--score {
+  background: $white;
+  padding: 20px;
+}
+
+.Result--button {
+  width: 80%;
+  @include teal-button;
 }
