--- a/client/styles/gameboard.scss
+++ b/client/styles/gameboard.scss
@@ -1,10 +1,18 @@
 @mixin teal-button {
+  width: 100%;
   border: 1px solid $light-teal-cream;
 
   &:hover {
     border: 1px solid $white;
     background: $teal-cream;
     color: $white;
+  }
+}
+
+.GameBoard {
+  margin-top: 2em;
+  @media screen and (max-width: 360px) {
+    margin-top: 10px;
   }
 }
 
@@ -20,6 +28,7 @@
     width: 64px;
   }
 }
+
 .Category--title {
   display: flex;
   justify-content: center;
@@ -57,7 +66,6 @@
 }
 
 .Choice > button {
-  width: 100%;
   height: 80px;
   white-space: normal;
   word-wrap: break-word;
@@ -85,6 +93,8 @@
 }
 
 .Result--button {
-  width: 80%;
   @include teal-button;
+  @media screen and (max-width: 320px) {
+    font-size: 1.3rem;
+  }
 }
