--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -11,11 +11,13 @@ $black: #000;
 $lightblue: #add8e6;
 $teal-cream: #2e6b61;
 $light-teal-cream: #5aa492;
+$crimson: #dc143c;
 
 $navshadow: rgba(10, 10, 10, 0.2);
 
 // Primary Colors
-$primary: $turquoise;
+$primary: $teal-cream;
+$secondary: $light-teal-cream;
 $info: $blue;
 $success: $green;
 $warning: $yellow;
